cleaned up slicing template projections fortran side.

--- a/python/slice.ipynb
+++ b/python/slice.ipynb
@@ -283,16 +283,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "projections_x_runtime = np.zeros((len(states), 3*ny_half-2), dtype=np.complex128)\n",
-    "projections_z_runtime = np.zeros((len(states), 3*ny_half-2), dtype=np.complex128)\n",
-    "\n",
-    "projections_x_runtime[:,:ny_half-1] = projections_xu_runtime[:,1:]\n",
-    "projections_x_runtime[:,ny_half-1:2*ny_half-2] = projections_xv_runtime[:,:]\n",
-    "projections_x_runtime[:,2*ny_half-2:] = projections_xw_runtime[:,:]\n",
-    "\n",
-    "projections_z_runtime[:,:ny_half] = projections_zu_runtime[:,:]\n",
-    "projections_z_runtime[:,ny_half:2*ny_half-1] = projections_zv_runtime[:,:]\n",
-    "projections_z_runtime[:,2*ny_half-1:] = projections_zw_runtime[:,1:]"
+    "projections_x_runtime_rview = np.loadtxt(projdir / \"projections_x.gp\")\n",
+    "projections_z_runtime_rview = np.loadtxt(projdir / \"projections_z.gp\")"
    ]
   },
   {
